fix: remove the button css styling in css file (FM-355) (#1527)
* fix: adjust long text title in other language in FTM (FM-355)

* fix: add test case (FM-355)

* fix: update build files(FM-355)

* fix: fix merged conflict (FM-355)

* fix: some languages overlaps with the playbutton (FM-355)

* fix: remove title in scene handler (FM-355)

* fix: update build files (FM-355)

* fix: add z index to title (FM-355)

--- a/src/scenes/start-scene/start-scene.scss
+++ b/src/scenes/start-scene/start-scene.scss
@@ -6,9 +6,11 @@
 #title {
   width: 100%;
   font-family: Atma-SemiBold, sans-serif;
+  z-index: 4;
+  position: relative;
   margin-top: 15%;
   text-align: center;
-  padding: 15px 10px;
+  padding: 15px 10px 0;
   font-size: 8vw;
   color: #f8b618;
   text-shadow:
